Changelog 0.2.4:
Added ability to delay Trakt Sync
Added notice for Initial Trakt Sync with warning about delaying
Added further information to the Trakt Sync background progress dialog
Increased item filtering accuracy
Improvements to Premiumize torrent link identification

Changelog 0.2.3:
Removed unused show thread for TVDB modoule episodeIDToListItem
Rework of 24 hour release delay setting
Fixed issue with some seasons not showing episodes
Hoster scrape threads exit more gracefully now

Changelog 0.2.2:
Maintenance cycle timeout reduced to 15 minutes
Reduced concurrent tasks for background trakt syncs
Added more fallbacks for menus with items that can't be built

Changelog 0.2.1:
Fixed issue if Kodi meta was unable to be filled for mixed episode list record

Changelog 0.2.0:
Added removal of None items for next up list.

Changelog 0.1.50:
Fixed UnWatchedEpisodes list item property for seasons

Changelog 0.1.49:
Fixed Movie Collection Sorting
Fixed shows get_season_episodes falling back to episode update

Changelog 0.1.48:
Fixed Marking As Watched not updating local trakt records
Meta requests now run in a queue to throttle thread creation
Fixed season_count not being checked in local trakt database
Added more info label cleanups
Added TotalSeasons to item properties
Fixed spelling of UnWatchedEpisodes item property

Changelog 0.1.47:
Removed thread stack size changes (possibly causing Kodi crashes)

Changelog 0.1.46:
Fixed Movies not correctly marked as watched
Movies Collection now pulled from local database instead of Trakt call

Changelog 0.1.45:
Added Years menu item to shows
Added Background Task Style scrape display option
Fixed source utils deaccent function
Added Re-Build Trakt Datbase menu item

Changelog 0.1.44:
Trakt Sync Database now integrated
Duplicate source removal now performed using dictionary of hashes and urls
Real Debrid cache checks are now threaded to increase cache check speeds
Fixed Hide SD causing only SD to show