@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.seren" version="0.2.4" name="Seren" provider-name="Nixgates">
+<addon id="plugin.video.seren" version="0.2.5" name="Seren" provider-name="Nixgates">
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
 		<import addon="script.module.requests" version="2.19.1" />
@@ -27,6 +27,9 @@
 			<fanart>temp-fanart.png</fanart>
 		</assets>
 		<news>
+Changelog 0.2.5:
+Fixed issue with clean_title not applying to old version of function
+
 Changelog 0.2.4:
 Added ability to delay Trakt Sync
 Added notice for Initial Trakt Sync with warning about delaying
